# x-vit

./: .gitignore  CMakeLists.txt
images/: rocket32.ppm  shark32.ppm  woman32.ppm
include/: engine.h  kernel.h  model.h
models/: vit_cifar100.yaml  vit_config.yaml
src/: engine.c  kernel_attn.c  kernel_ffn.c  kernel_gelu.c  kernel_layernorm.c  kernel_matmul.c  kernel_softmax.c  main.c
tools/: onnx2int8.py  test.py  train.py
